UI: Remove "FLV" from "FLV Recording Path" text

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -265,7 +265,7 @@ Basic.Settings.Output.Mode="Output Mode"
 Basic.Settings.Output.Mode.Simple="Simple"
 Basic.Settings.Output.Mode.Adv="Advanced"
 Basic.Settings.Output.Mode.FFmpeg="FFmpeg Output"
-Basic.Settings.Output.Simple.SavePath="FLV Recording Path"
+Basic.Settings.Output.Simple.SavePath="Recording Path"
 Basic.Settings.Output.VideoBitrate="Video Bitrate"
 Basic.Settings.Output.AudioBitrate="Audio Bitrate"
 Basic.Settings.Output.Reconnect="Automatically Reconnect"
