--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -426,3 +426,7 @@ Push-to-talk="Push-to-talk"
 # scene item hotkeys
 SceneItemShow="Show '%1'"
 SceneItemHide="Hide '%1'"
+
+# Output warnings
+OutputWarnings.NoTracksSelected="You must select at least one track"
+OutputWarnings.MultiTrackRecording="Warning: Not all formats support multiple tracks per recording"
